Removed redundant Hugo conditionals

--- a/layouts/partials/footer.html
+++ b/layouts/partials/footer.html
@@ -1,5 +1,5 @@
   <footer>
-    <a href='{{ .Site.BaseURL }}license'>{{ with .Site.Params.license }}{{ . }}{{ else }}&copy {{ end }} {{ .Site.Copyright }}</a>
+    <a href='{{ .Site.BaseURL }}license'>&copy{{ .Site.Copyright }}</a>
     <div class="divider">•</div>
     <div>Made with <a class="nav-link" href="https://gohugo.io" target="_blank">Hugo</a></div>
     <div class="divider">•</div>
