--- a/layouts/partials/header.html
+++ b/layouts/partials/header.html
@@ -2,8 +2,8 @@
   <a class="terminal" href="{{ .Site.BaseURL }}"><img src={{ "/terminal.svg" | relURL }} alt="Terminal icon"></a>
 
   <nav class="nav-item">
-    <a class="nav-link" href='{{ .Site.BaseURL }}about'>{{ with .Site.Params.about }}{{ . }}{{ else }}About{{ end }}</a>
-    <a class="nav-link" href='{{ .Site.BaseURL }}archive'>{{ with .Site.Params.archive }}{{ . }}{{ else }}Archive{{ end }}</a>
+    <a class="nav-link" href='{{ .Site.BaseURL }}about'>About</a>
+    <a class="nav-link" href='{{ .Site.BaseURL }}archive'>Archive</a>
   </nav>
 
   <a class="brand" href='{{ .Site.BaseURL }}'>Clever Laziness</a>
