--- a/layouts/_default/single.html
+++ b/layouts/_default/single.html
@@ -1,4 +1,5 @@
 {{ partial "head.html" . }}
+{{ partial "header.html" . }}
 <article class="post">
   <h2 class="title">{{ .Title }}</h2>
   {{ if .Params.showthedate }}
