Forgot the header partial in lists

--- a/layouts/_default/list.html
+++ b/layouts/_default/list.html
@@ -1,4 +1,5 @@
 {{ partial "head.html" . }}
+{{ partial "header.html" . }}
 <div class="content-list">
 {{ range .Data.Pages.GroupByDate "2006" }}
 <div class="content-list-date">{{ .Key }}</div>
