--- a/layouts/partials/footer.html
+++ b/layouts/partials/footer.html
@@ -1,13 +1,9 @@
   <footer>
+    <div class="cursor">$>&nbsp</div>
     <a href='{{ .Site.BaseURL }}license'>&copy{{ .Site.Copyright }}</a>
     <div class="divider">•</div>
     <div>Made with <a class="nav-link" href="https://gohugo.io" target="_blank">Hugo</a></div>
-    <div class="divider">•</div>
-    {{with .Site.Params.twitter}}
-    <a class="nav-link" href="https://twitter.com/{{.}}" target="_blank">Twitter</a>
-    {{end}}
-    <div class="divider">•</div>
-    <a class="nav-link" href="{{ .Site.RSSLink }}" target="_blank">RSS</a>
+    <div class="blink">_</div>
   </footer>
 
   <!-- Footnotes -->
