--- a/layouts/partials/header.html
+++ b/layouts/partials/header.html
@@ -3,8 +3,10 @@
 
   <a class="brand" href='{{ .Site.BaseURL }}'>Clever Laziness</a>
 
-  <nav class="nav-item">
-    <a class="nav-link" href='{{ .Site.BaseURL }}about'>About</a>
-    <a class="nav-link" href='{{ .Site.BaseURL }}archive'>Archive</a>
+  
+  <nav class="nav-item">var menu = [
+      <div>"</div><a class="nav-link" href='{{ .Site.BaseURL }}archive'>archive</a><div>"</div>,
+      <div>"</div><a class="nav-link" href='{{ .Site.BaseURL }}about'>about</a><div>"</div>
+      ];
   </nav>
 </header>
