--- a/layouts/partials/header.html
+++ b/layouts/partials/header.html
@@ -4,7 +4,7 @@
   <a class="brand" href='{{ .Site.BaseURL }}'>Clever Laziness</a>
 
   
-  <nav class="nav-item">var menu = [
+  <nav class="nav-item">var&nbsp<div>menu</div> = [
       <div>"</div><a class="nav-link" href='{{ .Site.BaseURL }}archive'>archive</a><div>"</div>,
       <div>"</div><a class="nav-link" href='{{ .Site.BaseURL }}about'>about</a><div>"</div>
       ];
