--- a/static/css/layout.css
+++ b/static/css/layout.css
@@ -17,6 +17,12 @@
 }
 
 @font-face {
+  font-family: "Plex Mono";
+  font-weight: 700;
+  src: local("Plex Mono"), local("Plex-Mono-Bold"), url(/fonts/Plex-Mono-Bold.woff2) format("woff2");
+}
+
+@font-face {
   font-family: "Plex Sans";
   font-weight: 400;
   src: local("Plex Sans"), local("Plex-Sans-Regular"), url(/fonts/Plex-Sans-Regular.woff2) format("woff2");
@@ -53,6 +59,7 @@ body > * {
 }
 
 h1, h2, h3, h4 {
+  font-family: var(--mono-font);
   font-weight: 700;
   color: var(--heading);
 }
@@ -98,7 +105,7 @@ header {
   padding: 1.5rem 0;
   font-size: 3rem;
   text-align: center;
-  color: var(--icon);
+  color: var(--heading);
 }
 
 .nav-item {
@@ -110,6 +117,10 @@ header {
   display: -ms-flexbox;
   display: -webkit-flex;
   display: flex;
+}
+
+.nav-item div:first-child {
+  color: var(--meta);
 }
 
 .nav-link {
