--- a/layouts/partials/footer.html
+++ b/layouts/partials/footer.html
@@ -1,9 +1,9 @@
   <footer>
-    <div class="cursor">$>&nbsp</div>
-    <a href='{{ .Site.BaseURL }}license'>&copy{{ .Site.Copyright }}</a>
+    <div class="cursor">$&nbsp</div>
+    <div><a href='{{ .Site.BaseURL }}license'>&copy</a>{{ .Site.Copyright }}</div>
     <div class="divider">•</div>
     <div>Made with <a class="nav-link" href="https://gohugo.io" target="_blank">Hugo</a></div>
-    <div class="blink">_</div>
+    <div class="blink">|</div>
   </footer>
 
   <!-- Footnotes -->
