--- a/layouts/partials/header.html
+++ b/layouts/partials/header.html
@@ -5,8 +5,15 @@
 
   
   <nav class="nav-item">var&nbsp<div>menu</div> = [
-      <div>"</div><a class="nav-link" href='{{ .Site.BaseURL }}archive'>archive</a><div>"</div>,
-      <div>"</div><a class="nav-link" href='{{ .Site.BaseURL }}about'>about</a><div>"</div>
+    <div>"</div>
+    <a class="nav-link" href='{{ .Site.BaseURL }}work'>work</a>
+    <div>"</div>,
+    <div>"</div>
+    <a class="nav-link" href='{{ .Site.BaseURL }}archive'>archive</a>
+    <div>"</div>,
+    <div>"</div>
+    <a class="nav-link" href='{{ .Site.BaseURL }}about'>about</a>
+    <div>"</div>
       ];
   </nav>
 </header>
