--- a/static/css/layout.css
+++ b/static/css/layout.css
@@ -3,6 +3,7 @@
   --mono-font: 'Plex Mono', Courier, monospace;
   --heading: #89F396;
   --meta: rgba(160, 230, 250, 0.5);
+  --underline: 1.5px solid var(--highlight);
   --icon: #9687B9;
   --highlight: #85406B;
   --hover: 1.5px solid #773785;
@@ -37,11 +38,19 @@
 
 /* BASE STYLING */
 html {
+  overflow: hidden;
+  height: 100%;
+  width: auto;
   -webkit-overflow-scrolling: touch;
 }
 
 body {
   margin: 0;
+  padding: 0;
+  height: 100%;
+  width: auto;
+  overflow: auto;
+  overflow-x: hidden;
   font-family: 'Plex Sans', Helvetica, sans-serif;
   font-size: 1rem;
   color: #BFBFBF;
@@ -90,45 +99,59 @@ a:hover {
   width: 100%;
 }
 
+/* Blinking Cursor Animation */
+@-webkit-keyframes blinker {
+ 50% {
+  opacity:0
+ }
+}
+
+@keyframes blinker {
+ 50% {
+  opacity:0
+ }
+}
+
 
 /* HEADER  */
 header {
+  grid-column: full;
   font-weight: 700;
   text-transform: uppercase;
-  padding-bottom: 3rem;
+  padding: 1rem 1rem 3rem;
   display: -ms-grid;
   display: grid;
-  justify-items: center;
+  grid-template-columns: repeat(2, 1fr);
 }
 
-.brand {
-  padding: 1.5rem 0;
-  font-size: 3rem;
-  text-align: center;
-  color: var(--heading);
+.terminal svg {
+  width: 50px;
+  height: auto;
+}
+
+#terminal:hover #cursor {
+  -webkit-animation: blinker 1s step-start infinite;
+  animation: blinker 1s step-start infinite;
 }
 
 .nav-item {
   font-family: var(--mono-font);
-  color: var(--icon);
+  width: 100%;
   margin: 0 auto;
-  text-transform: lowercase;
   display: -webkit-box;
   display: -ms-flexbox;
   display: -webkit-flex;
   display: flex;
-}
-
-.nav-item div:first-child {
-  color: var(--meta);
+  justify-content: end;
+  align-items: flex-start;
 }
 
 .nav-link {
-  color: var(--meta);
+  margin: 0 5px;
 }
 
 .nav-link:hover {
-  color: var(--heading);
+  border-bottom: var(--underline);
 }
 
 /* POSTS */
@@ -237,18 +260,6 @@ footer {
 .blink {
   -webkit-animation: blinker 1s step-start infinite;
   animation: blinker 1s step-start infinite;
-}
-
-@-webkit-keyframes blinker {
- 50% {
-  opacity:0
- }
-}
-
-@keyframes blinker {
- 50% {
-  opacity:0
- }
 }
 
 .divider {
