Further font changes
Changed local fonts to Google Fonts.
Added Roboto font for content body.
Added preconnect to Google Fonts domain.

--- a/layouts/partials/head.html
+++ b/layouts/partials/head.html
@@ -28,7 +28,9 @@
   <meta property="og:image" content="{{ .Site.BaseURL }}avatar.png" />
   {{ template "_internal/schema.html" . }}
 
-  <!-- CSS -->
+  <!-- Stylesheets -->
+  <link rel="preconnect" href="https://fonts.gstatic.com/" crossorigin>
+  <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto|Rubik:400,700">
   <link rel="stylesheet" href={{ "/css/layout.css" | relURL }} />
   <link rel="stylesheet" href={{ "/css/barefoot.css" | relURL }} />
 
