--- a/layouts/partials/footer.html
+++ b/layouts/partials/footer.html
@@ -1,5 +1,5 @@
   <footer>
-    <div><a href='{{ .Site.BaseURL }}license'>&copy</a>{{ .Site.Copyright }}</div>
+    <div>&copy {{ .Site.Copyright }}</div>
     <div class="divider">•</div>
     <div>Made with <a class="nav-link" href="https://gohugo.io" target="_blank">Hugo</a></div>
     <div class="divider">•</div>
