View height adjustments
Added main class to all full pages. Then added a min height to avoid layout breakage.

--- a/layouts/_default/list.html
+++ b/layouts/_default/list.html
@@ -1,11 +1,11 @@
 {{ partial "head.html" . }}
 {{ partial "header.html" . }}
-<div class="content-list">
-{{ range .Data.Pages.GroupByDate "2006" }}
-<div class="content-list-date">{{ .Key }}</div>
-  {{ range .Pages }}
-    {{ .Render "li"}}
+<div class="main content-list">
+  {{ range .Data.Pages.GroupByDate "2006" }}
+  <div class="content-list-date">{{ .Key }}</div>
+    {{ range .Pages }}
+      {{ .Render "li"}}
+    {{ end }}
   {{ end }}
-{{ end }}
 </div>
 {{ partial "footer.html" . }}
