--- a/layouts/_default/single.html
+++ b/layouts/_default/single.html
@@ -1,6 +1,6 @@
 {{ partial "head.html" . }}
 {{ partial "header.html" . }}
-<article class="post">
+<article class="main post">
   <h2 class="title">{{ .Title }}</h2>
   {{ if .Params.showthedate }}
     <div class="date">{{ .Date.Format "2006-01-02" }}</div>
