--- a/layouts/index.html
+++ b/layouts/index.html
@@ -1,6 +1,6 @@
 {{ partial "head.html" . }}
 {{ partial "header.html" . }}
-<main>
+<main class="main">
   {{ $paginator := .Paginate (where .Data.Pages "Type" "archive") 10 }}
     {{ range $paginator.Pages }}
       {{ .Render "summary" }}
