--- a/static/css/layout.css
+++ b/static/css/layout.css
@@ -39,6 +39,11 @@ body > * {
   grid-column: main;
 }
 
+.main {
+  height: 100%;
+  min-height: calc(100vh - 400px);
+}
+
 h1, h2, h3, h4 {
   font-family: 'Rubik', sans-serif;
   font-weight: 700;
@@ -137,7 +142,6 @@ header {
 /* POSTS */
 .post {
   padding-bottom: 2.5rem;
-  min-height: 62vh;
 }
 
 .post-preview {
