--- a/layouts/partials/header.html
+++ b/layouts/partials/header.html
@@ -143,6 +143,8 @@
     </svg>
   </a>
 
+  <div class="brand">Clever Laziness</div>
+
   <nav class="nav-item">
     <a class="nav-link" href='{{ .Site.BaseURL }}archive'>Archive</a>
     <a class="nav-link" href='{{ .Site.BaseURL }}work'>Work</a>
