Updated site assets
Favicon
Open Graph Image
Apple Touch Icon
Safari Pinned Tab

--- a/layouts/partials/head.html
+++ b/layouts/partials/head.html
@@ -44,7 +44,7 @@
   <link rel="apple-touch-icon" sizes="152x152" href={{ "/apple-touch-icon-152x152.png" | relURL }}>
   <link rel="apple-touch-icon" sizes="167x167" href={{ "/apple-touch-icon-167x167.png" | relURL }}>
   <link rel="apple-touch-icon" sizes="180x180" href={{ "/apple-touch-icon-180x180.png" | relURL }}>
-  <link rel="mask-icon" color="#85406B" href={{ "/safari-pinned-tab.svg" | relURL }}>
+  <link rel="mask-icon" color="#D7545E" href={{ "/safari-pinned-tab.svg" | relURL }}>
 
   <!-- Google Analytics -->
   <script>
