--- a/layouts/_default/single.html
+++ b/layouts/_default/single.html
@@ -10,4 +10,5 @@
     <div class="tag"><a href="/tags/{{ . | urlize }}">#{{.}}</a></div>
   {{ end }}
 </article>
+{{ partial "social.html" . }}
 {{ partial "footer.html" . }}
